Update all PO files Thanks to @teamblue-e2

--- a/po/ar.po
+++ b/po/ar.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2 teamBlue\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-10-27 20:38+0200\n"
+"POT-Creation-Date: 2024-01-06 14:27+0100\n"
 "PO-Revision-Date: 2018-12-17 02:51+0200\n"
 "Last-Translator: Hazem <moustafagamal@hotmail.com>\n"
 "Language-Team: Arabic <moustafagamal@hotmail.com>\n"
@@ -246,6 +246,10 @@ msgstr ""
 
 #. TRANSLATORS: long date representation short dayname daynum short monthname hour:minute in strftime() format! See 'man strftime'
 msgid "%a %e/%m  %-H:%M"
+msgstr ""
+
+#, python-format
+msgid "%d"
 msgstr ""
 
 #, python-format
@@ -1472,9 +1476,6 @@ msgstr ""
 msgid "Aruba"
 msgstr ""
 
-msgid "As defined by the skin"
-msgstr ""
-
 msgid "Ask user"
 msgstr "أسال المستخدم"
 
@@ -2320,6 +2321,11 @@ msgstr "قناه"
 msgid "Channel Info"
 msgstr "قناه"
 
+#
+#, fuzzy
+msgid "Channel Selection"
+msgstr "إختيار القناه"
+
 msgid "Channel button always changes sides"
 msgstr ""
 
@@ -2330,12 +2336,6 @@ msgstr "قائمة لائحة القنوات"
 #, fuzzy
 msgid "Channel list type"
 msgstr "قائمة لائحة القنوات"
-
-msgid "Channel list update Eventinfo delay"
-msgstr ""
-
-msgid "Channel list update interval for Eventinfo on cursor moving"
-msgstr ""
 
 #
 msgid "Channel not in services list"
@@ -3529,11 +3529,6 @@ msgstr ""
 msgid "Default movie location"
 msgstr "المكان الافتراضى للفيلم"
 
-#
-#, fuzzy
-msgid "Default recording type"
-msgstr "أبـدأ التسجيل؟"
-
 #, fuzzy
 msgid "Default settings"
 msgstr "الاعدادات الافتراضيه"
@@ -3626,6 +3621,9 @@ msgstr ""
 msgid "Delay in miliseconds between scrolling characters on display."
 msgstr ""
 
+msgid "Delay when closing a stream relay service before reallocating the tuner for another service. Using '0' is only recommended for boxes with multiple satellite tuners."
+msgstr ""
+
 #
 msgid "Delete"
 msgstr "أمسح"
@@ -3707,9 +3705,6 @@ msgid "Denmark"
 msgstr ""
 
 msgid "Depth"
-msgstr ""
-
-msgid "Descramble & record ECM gives the option to descramble afterwards if descrambling on recording failed. 'Don't descramble, record ECM' save a scramble recording that can be descrambled on playback. 'Normal' means descramble the recording and don't record ECM."
 msgstr ""
 
 msgid "Descramble receiving http streams"
@@ -5959,6 +5954,9 @@ msgstr "القرص الصلب فى وضع الاستعداد بعد"
 msgid "Hardware Accelerated"
 msgstr ""
 
+msgid "Hardware: "
+msgstr ""
+
 msgid "HddMount"
 msgstr ""
 
@@ -5993,9 +5991,6 @@ msgid "Hide channel list in radio mode"
 msgstr ""
 
 msgid "Hide known extensions"
-msgstr ""
-
-msgid "Hide number markers"
 msgstr ""
 
 #, fuzzy
@@ -6262,6 +6257,10 @@ msgid ""
 "Image to install is invalid\n"
 "%s"
 msgstr ""
+
+#, fuzzy
+msgid "Image: "
+msgstr "خلف"
 
 msgid "ImageWizard"
 msgstr ""
@@ -7147,6 +7146,9 @@ msgstr ""
 #, fuzzy
 msgid "MB"
 msgstr "ب"
+
+msgid "MENU"
+msgstr ""
 
 msgid "MHz"
 msgstr ""
@@ -8318,6 +8320,11 @@ msgid "Number or SMS style data entry"
 msgstr ""
 
 #
+#, fuzzy
+msgid "OE Version: "
+msgstr "الاشاره"
+
+#
 msgid "OK"
 msgstr "موافق"
 
@@ -8620,6 +8627,12 @@ msgid "POT-Creation Date"
 msgstr ""
 
 msgid "PPanel"
+msgstr ""
+
+msgid "PREVIOUS"
+msgstr ""
+
+msgid "PVR"
 msgstr ""
 
 #
@@ -9652,6 +9665,11 @@ msgstr ""
 #, fuzzy
 msgid "Python version: "
 msgstr "إصدار جديد:"
+
+#
+#, fuzzy
+msgid "Pythonscript"
+msgstr "الوصـف"
 
 msgid "Qatar"
 msgstr ""
@@ -11270,6 +11288,11 @@ msgid "Serial No"
 msgstr "الاشاره"
 
 #
+#, fuzzy
+msgid "Serial: "
+msgstr "الاشاره"
+
+#
 #, fuzzy, python-format
 msgid "Serial: %s"
 msgstr "الاشاره"
@@ -11333,6 +11356,11 @@ msgid "Service info - tuner setting values"
 msgstr ""
 
 #
+#, fuzzy
+msgid "Service info font size"
+msgstr "معلومات القناه"
+
+#
 msgid ""
 "Service invalid!\n"
 "(Timeout reading PMT)"
@@ -11344,10 +11372,20 @@ msgid "Service name"
 msgstr "بخث عن القنوات"
 
 #
+#, fuzzy
+msgid "Service name font size"
+msgstr "بخث عن القنوات"
+
+#
 msgid ""
 "Service not found!\n"
 "(SID not found in PAT)"
 msgstr ""
+
+#
+#, fuzzy
+msgid "Service number font size"
+msgstr "العناوين الفرعيه"
 
 msgid "Service reference"
 msgstr ""
@@ -11710,6 +11748,9 @@ msgid "Show directories first"
 msgstr "الغاء تحرير المفضله"
 
 msgid "Show directories on first or last in list.(must restart File Commander)"
+msgstr ""
+
+msgid "Show disabled timers (local only)"
 msgstr ""
 
 #, fuzzy
@@ -12083,10 +12124,6 @@ msgstr "مفرد"
 
 msgid "Single EPG"
 msgstr "دليل برامج واحد"
-
-#, fuzzy
-msgid "Single line mode"
-msgstr "أختار اسلوب الفيديو"
 
 #
 msgid "Single satellite"
@@ -12708,6 +12745,9 @@ msgstr "الوضع المخزن"
 msgid "Stream"
 msgstr ""
 
+msgid "Stream Relay delay"
+msgstr ""
+
 msgid "Stream request"
 msgstr ""
 
@@ -13243,6 +13283,11 @@ msgstr ""
 "الدليل %s لا يمكن الكتابه فيه.\n"
 " تأكد من إختيار دليل بديل يمكن الكتابه فيه"
 
+msgid ""
+"The enigma.info file for the boxinformation is not available or the content is invalid.\n"
+"Press any key to continue?"
+msgstr ""
+
 #
 msgid "The following files were found..."
 msgstr "تم العثور على هذه الملفات"
@@ -13402,6 +13447,9 @@ msgstr ""
 
 #
 msgid "This DVD RW medium is already formatted - reformatting will erase all content on the disc."
+msgstr ""
+
+msgid "This allows you to change the font size relative to skin size, so 1 increases by 1 point size, and -1 decreases by 1 point size"
 msgstr ""
 
 msgid "This allows you to set the number of digits to 5, if you have more than 9999 channels."
@@ -14447,6 +14495,10 @@ msgstr ""
 msgid "Use power measurement"
 msgstr "استخدم قـياس الطاقه"
 
+#, fuzzy
+msgid "Use skin default"
+msgstr "إستعادة النسخه الإحتياطيه "
+
 msgid "Use the cursor keys to select an installed image and then Start button."
 msgstr ""
 
@@ -15123,9 +15175,6 @@ msgid "When enabled, it will automatically play to the last saved radio service 
 msgstr ""
 
 msgid "When enabled, measure power consumption to detect when the rotor stops turning (when supported by the tuner)."
-msgstr ""
-
-msgid "When enabled, number markers will be hidden."
 msgstr ""
 
 msgid "When enabled, reformat subtitles to match the width of the screen."
@@ -17153,3 +17202,9 @@ msgstr ""
 
 msgid "zapped"
 msgstr "تم الانتقال"
+
+msgid "°E"
+msgstr ""
+
+msgid "°W"
+msgstr ""
