--- a/po/hr.po
+++ b/po/hr.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2 teamBlue\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-10-27 20:38+0200\n"
+"POT-Creation-Date: 2024-01-06 14:27+0100\n"
 "PO-Revision-Date: 2020-03-03 08:50+0100\n"
 "Last-Translator: Željko <zeljko2@hi.ht.hr>\n"
 "Language-Team: Željko\n"
@@ -246,6 +246,10 @@ msgstr ""
 
 #. TRANSLATORS: long date representation short dayname daynum short monthname hour:minute in strftime() format! See 'man strftime'
 msgid "%a %e/%m  %-H:%M"
+msgstr ""
+
+#, python-format
+msgid "%d"
 msgstr ""
 
 #, python-format
@@ -1472,9 +1476,6 @@ msgstr ""
 msgid "Aruba"
 msgstr ""
 
-msgid "As defined by the skin"
-msgstr ""
-
 #
 msgid "Ask user"
 msgstr ""
@@ -2353,6 +2354,11 @@ msgstr "Kanal"
 msgid "Channel Info"
 msgstr "Kanal"
 
+#
+#, fuzzy
+msgid "Channel Selection"
+msgstr "Sekcija kanala"
+
 msgid "Channel button always changes sides"
 msgstr ""
 
@@ -2365,12 +2371,6 @@ msgstr "Izbornik liste kanala"
 #, fuzzy
 msgid "Channel list type"
 msgstr "Izbornik liste kanala"
-
-msgid "Channel list update Eventinfo delay"
-msgstr ""
-
-msgid "Channel list update interval for Eventinfo on cursor moving"
-msgstr ""
 
 #
 msgid "Channel not in services list"
@@ -3636,11 +3636,6 @@ msgstr ""
 
 #
 #, fuzzy
-msgid "Default recording type"
-msgstr "Započeti Snimanje?"
-
-#
-#, fuzzy
 msgid "Default settings"
 msgstr "Trenutne postavke"
 
@@ -3732,6 +3727,9 @@ msgid "Delay in miliseconds before start of scrolling text on display."
 msgstr ""
 
 msgid "Delay in miliseconds between scrolling characters on display."
+msgstr ""
+
+msgid "Delay when closing a stream relay service before reallocating the tuner for another service. Using '0' is only recommended for boxes with multiple satellite tuners."
 msgstr ""
 
 #
@@ -3826,9 +3824,6 @@ msgid "Denmark"
 msgstr ""
 
 msgid "Depth"
-msgstr ""
-
-msgid "Descramble & record ECM gives the option to descramble afterwards if descrambling on recording failed. 'Don't descramble, record ECM' save a scramble recording that can be descrambled on playback. 'Normal' means descramble the recording and don't record ECM."
 msgstr ""
 
 msgid "Descramble receiving http streams"
@@ -6204,6 +6199,9 @@ msgstr "Isključi tvrdi disk nakon"
 msgid "Hardware Accelerated"
 msgstr ""
 
+msgid "Hardware: "
+msgstr ""
+
 msgid "HddMount"
 msgstr ""
 
@@ -6240,9 +6238,6 @@ msgid "Hide channel list in radio mode"
 msgstr ""
 
 msgid "Hide known extensions"
-msgstr ""
-
-msgid "Hide number markers"
 msgstr ""
 
 #
@@ -6516,6 +6511,9 @@ msgstr ""
 msgid ""
 "Image to install is invalid\n"
 "%s"
+msgstr ""
+
+msgid "Image: "
 msgstr ""
 
 msgid "ImageWizard"
@@ -7421,6 +7419,9 @@ msgstr ""
 #, fuzzy
 msgid "MB"
 msgstr "B"
+
+msgid "MENU"
+msgstr ""
 
 msgid "MHz"
 msgstr ""
@@ -8629,6 +8630,11 @@ msgid "Number or SMS style data entry"
 msgstr ""
 
 #
+#, fuzzy
+msgid "OE Version: "
+msgstr "Model:"
+
+#
 msgid "OK"
 msgstr "OK"
 
@@ -8951,6 +8957,12 @@ msgid "POT-Creation Date"
 msgstr ""
 
 msgid "PPanel"
+msgstr ""
+
+msgid "PREVIOUS"
+msgstr ""
+
+msgid "PVR"
 msgstr ""
 
 #
@@ -10068,6 +10080,11 @@ msgstr ""
 #, fuzzy
 msgid "Python version: "
 msgstr "Nova verzija:"
+
+#
+#, fuzzy
+msgid "Pythonscript"
+msgstr "Opis"
 
 msgid "Qatar"
 msgstr ""
@@ -11797,6 +11814,9 @@ msgstr ""
 msgid "Serial No"
 msgstr ""
 
+msgid "Serial: "
+msgstr ""
+
 #, python-format
 msgid "Serial: %s"
 msgstr ""
@@ -11861,6 +11881,11 @@ msgid "Service info - tuner setting values"
 msgstr ""
 
 #
+#, fuzzy
+msgid "Service info font size"
+msgstr "Info Usluge"
+
+#
 msgid ""
 "Service invalid!\n"
 "(Timeout reading PMT)"
@@ -11874,12 +11899,22 @@ msgid "Service name"
 msgstr "Pretraživanje usluge"
 
 #
+#, fuzzy
+msgid "Service name font size"
+msgstr "Pretraživanje usluge"
+
+#
 msgid ""
 "Service not found!\n"
 "(SID not found in PAT)"
 msgstr ""
 "Usluga nije pronađena!\n"
 "(SID nije pronađen u PATu)"
+
+#
+#, fuzzy
+msgid "Service number font size"
+msgstr "Titlovi"
 
 msgid "Service reference"
 msgstr ""
@@ -12242,6 +12277,9 @@ msgid "Show directories first"
 msgstr "odustani od editiranja favorita"
 
 msgid "Show directories on first or last in list.(must restart File Commander)"
+msgstr ""
+
+msgid "Show disabled timers (local only)"
 msgstr ""
 
 msgid "Show disclaimer"
@@ -12624,11 +12662,6 @@ msgstr "Jedan"
 #
 msgid "Single EPG"
 msgstr "Jedan EPG"
-
-#
-#, fuzzy
-msgid "Single line mode"
-msgstr "Info Usluge"
 
 #
 msgid "Single satellite"
@@ -13273,6 +13306,9 @@ msgstr "Pohranjene pozicije"
 msgid "Stream"
 msgstr ""
 
+msgid "Stream Relay delay"
+msgstr ""
+
 msgid "Stream request"
 msgstr ""
 
@@ -13804,6 +13840,11 @@ msgid ""
 "Make sure you select a writable directory instead."
 msgstr ""
 
+msgid ""
+"The enigma.info file for the boxinformation is not available or the content is invalid.\n"
+"Press any key to continue?"
+msgstr ""
+
 #
 msgid "The following files were found..."
 msgstr ""
@@ -13960,6 +14001,9 @@ msgstr ""
 
 #
 msgid "This DVD RW medium is already formatted - reformatting will erase all content on the disc."
+msgstr ""
+
+msgid "This allows you to change the font size relative to skin size, so 1 increases by 1 point size, and -1 decreases by 1 point size"
 msgstr ""
 
 msgid "This allows you to set the number of digits to 5, if you have more than 9999 channels."
@@ -15012,6 +15056,11 @@ msgstr ""
 msgid "Use power measurement"
 msgstr "Koristi mjerenje snage"
 
+#
+#, fuzzy
+msgid "Use skin default"
+msgstr "standardne postavke stila liste"
+
 msgid "Use the cursor keys to select an installed image and then Start button."
 msgstr ""
 
@@ -15704,9 +15753,6 @@ msgid "When enabled, it will automatically play to the last saved radio service 
 msgstr ""
 
 msgid "When enabled, measure power consumption to detect when the rotor stops turning (when supported by the tuner)."
-msgstr ""
-
-msgid "When enabled, number markers will be hidden."
 msgstr ""
 
 msgid "When enabled, reformat subtitles to match the width of the screen."
@@ -17854,3 +17900,9 @@ msgstr ""
 #
 msgid "zapped"
 msgstr "prebačen"
+
+msgid "°E"
+msgstr ""
+
+msgid "°W"
+msgstr ""
