--- a/po/th.po
+++ b/po/th.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2 teamBlue\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-10-27 20:38+0200\n"
+"POT-Creation-Date: 2024-01-06 14:27+0100\n"
 "PO-Revision-Date: 2010-04-08 18:13+0700\n"
 "Last-Translator: Tony - Thaidreambox\n"
 "Language-Team: Tony @ Thai Dreambox <tonyboyth@gmail.com>\n"
@@ -238,6 +238,10 @@ msgstr ""
 
 #. TRANSLATORS: long date representation short dayname daynum short monthname hour:minute in strftime() format! See 'man strftime'
 msgid "%a %e/%m  %-H:%M"
+msgstr ""
+
+#, python-format
+msgid "%d"
 msgstr ""
 
 #, python-format
@@ -1343,9 +1347,6 @@ msgstr ""
 msgid "Aruba"
 msgstr ""
 
-msgid "As defined by the skin"
-msgstr ""
-
 msgid "Ask user"
 msgstr "ถามผู้ใช้"
 
@@ -2147,6 +2148,10 @@ msgstr "ช่อง"
 msgid "Channel Info"
 msgstr "ช่อง"
 
+#, fuzzy
+msgid "Channel Selection"
+msgstr "เลือกช่องรายการ"
+
 msgid "Channel button always changes sides"
 msgstr ""
 
@@ -2157,12 +2162,6 @@ msgstr "เมนูช่องรายการ"
 #, fuzzy
 msgid "Channel list type"
 msgstr "เมนูช่องรายการ"
-
-msgid "Channel list update Eventinfo delay"
-msgstr ""
-
-msgid "Channel list update interval for Eventinfo on cursor moving"
-msgstr ""
 
 msgid "Channel not in services list"
 msgstr "ช่องนี้ไม่มีการให้บริการ"
@@ -3329,10 +3328,6 @@ msgid "Default movie location"
 msgstr ""
 
 #, fuzzy
-msgid "Default recording type"
-msgstr "เริ่มบันทึก?"
-
-#, fuzzy
 msgid "Default settings"
 msgstr "ตั้งค่าเริ่มต้น"
 
@@ -3423,6 +3418,9 @@ msgstr ""
 msgid "Delay in miliseconds between scrolling characters on display."
 msgstr ""
 
+msgid "Delay when closing a stream relay service before reallocating the tuner for another service. Using '0' is only recommended for boxes with multiple satellite tuners."
+msgstr ""
+
 msgid "Delete"
 msgstr "ลบ"
 
@@ -3501,9 +3499,6 @@ msgid "Denmark"
 msgstr ""
 
 msgid "Depth"
-msgstr ""
-
-msgid "Descramble & record ECM gives the option to descramble afterwards if descrambling on recording failed. 'Don't descramble, record ECM' save a scramble recording that can be descrambled on playback. 'Normal' means descramble the recording and don't record ECM."
 msgstr ""
 
 msgid "Descramble receiving http streams"
@@ -5632,6 +5627,9 @@ msgstr "ให้ฮาร์ดดิสก์ standby หลังจาก"
 msgid "Hardware Accelerated"
 msgstr ""
 
+msgid "Hardware: "
+msgstr ""
+
 msgid "HddMount"
 msgstr ""
 
@@ -5666,9 +5664,6 @@ msgid "Hide channel list in radio mode"
 msgstr ""
 
 msgid "Hide known extensions"
-msgstr ""
-
-msgid "Hide number markers"
 msgstr ""
 
 #, fuzzy
@@ -5931,6 +5926,10 @@ msgid ""
 "Image to install is invalid\n"
 "%s"
 msgstr ""
+
+#, fuzzy
+msgid "Image: "
+msgstr "ย้อนกลับ"
 
 msgid "ImageWizard"
 msgstr ""
@@ -6752,6 +6751,9 @@ msgstr ""
 #, fuzzy
 msgid "MB"
 msgstr "B"
+
+msgid "MENU"
+msgstr ""
 
 msgid "MHz"
 msgstr ""
@@ -7842,6 +7844,10 @@ msgstr ""
 msgid "Number or SMS style data entry"
 msgstr ""
 
+#, fuzzy
+msgid "OE Version: "
+msgstr "สัญญาณ:"
+
 msgid "OK"
 msgstr "ตกลง"
 
@@ -8131,6 +8137,12 @@ msgid "POT-Creation Date"
 msgstr ""
 
 msgid "PPanel"
+msgstr ""
+
+msgid "PREVIOUS"
+msgstr ""
+
+msgid "PVR"
 msgstr ""
 
 msgid "Package list update"
@@ -9105,6 +9117,10 @@ msgstr "Python frontend for /tmp/mmi.socket"
 #, fuzzy
 msgid "Python version: "
 msgstr "เวอร์ชั่นใหม่:"
+
+#, fuzzy
+msgid "Pythonscript"
+msgstr "รายละเอียด"
 
 msgid "Qatar"
 msgstr ""
@@ -10637,6 +10653,10 @@ msgstr "ภาษาเซอร์เบี่ยน"
 msgid "Serial No"
 msgstr "สัญญาณ:"
 
+#, fuzzy
+msgid "Serial: "
+msgstr "สัญญาณ:"
+
 #, fuzzy, python-format
 msgid "Serial: %s"
 msgstr "สัญญาณ:"
@@ -10691,6 +10711,10 @@ msgstr ""
 msgid "Service info - tuner setting values"
 msgstr ""
 
+#, fuzzy
+msgid "Service info font size"
+msgstr "รายละเอียดของบริการ"
+
 msgid ""
 "Service invalid!\n"
 "(Timeout reading PMT)"
@@ -10702,12 +10726,20 @@ msgstr ""
 msgid "Service name"
 msgstr "ค้นหาบริการ"
 
+#, fuzzy
+msgid "Service name font size"
+msgstr "ค้นหาบริการ"
+
 msgid ""
 "Service not found!\n"
 "(SID not found in PAT)"
 msgstr ""
 "ไม่พบบริการใดๆ !\n"
 "(ไม่พบ SID ใน PAT)"
+
+#, fuzzy
+msgid "Service number font size"
+msgstr "ซับไตเติ้ล"
 
 msgid "Service reference"
 msgstr ""
@@ -11049,6 +11081,9 @@ msgstr "ยกเลิกการแก้ไขรายการโปรด
 msgid "Show directories on first or last in list.(must restart File Commander)"
 msgstr ""
 
+msgid "Show disabled timers (local only)"
+msgstr ""
+
 #, fuzzy
 msgid "Show disclaimer"
 msgstr "แสดง Infoline"
@@ -11387,10 +11422,6 @@ msgstr "เดี่ยว"
 
 msgid "Single EPG"
 msgstr "ผังรายการเดี่ยว"
-
-#, fuzzy
-msgid "Single line mode"
-msgstr "เลือกโหมดวีดีโอ"
 
 msgid "Single satellite"
 msgstr "ดาวเทียวเดียว"
@@ -11963,6 +11994,9 @@ msgstr "บันทึกตำแหน่งแล้ว"
 msgid "Stream"
 msgstr ""
 
+msgid "Stream Relay delay"
+msgstr ""
+
 msgid "Stream request"
 msgstr ""
 
@@ -12450,6 +12484,11 @@ msgid ""
 "Make sure you select a writable directory instead."
 msgstr ""
 
+msgid ""
+"The enigma.info file for the boxinformation is not available or the content is invalid.\n"
+"Press any key to continue?"
+msgstr ""
+
 msgid "The following files were found..."
 msgstr "พบไฟล์เหล่านี้..."
 
@@ -12598,6 +12637,9 @@ msgstr ""
 
 msgid "This DVD RW medium is already formatted - reformatting will erase all content on the disc."
 msgstr "แผ่น DVD-RW นี้ได้รับการฟอร์แมทมาแล้ว หากทำซ้ำจะเป็นการลบข้อมูลออกทั้งหมด"
+
+msgid "This allows you to change the font size relative to skin size, so 1 increases by 1 point size, and -1 decreases by 1 point size"
+msgstr ""
 
 msgid "This allows you to set the number of digits to 5, if you have more than 9999 channels."
 msgstr ""
@@ -13582,6 +13624,10 @@ msgstr ""
 msgid "Use power measurement"
 msgstr "ใช้ power measurement"
 
+#, fuzzy
+msgid "Use skin default"
+msgstr "แสดงรูปแบบเริ่มต้น"
+
 msgid "Use the cursor keys to select an installed image and then Start button."
 msgstr ""
 
@@ -14235,9 +14281,6 @@ msgid "When enabled, it will automatically play to the last saved radio service 
 msgstr ""
 
 msgid "When enabled, measure power consumption to detect when the rotor stops turning (when supported by the tuner)."
-msgstr ""
-
-msgid "When enabled, number markers will be hidden."
 msgstr ""
 
 msgid "When enabled, reformat subtitles to match the width of the screen."
@@ -16169,3 +16212,9 @@ msgstr ""
 
 msgid "zapped"
 msgstr "เปลี่ยนช่องแล้ว"
+
+msgid "°E"
+msgstr ""
+
+msgid "°W"
+msgstr ""
