--- a/po/ca.po
+++ b/po/ca.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2 teamBlue\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-10-27 20:38+0200\n"
+"POT-Creation-Date: 2024-01-06 14:27+0100\n"
 "PO-Revision-Date: 2007-08-14 10:23+0200\n"
 "Last-Translator: Oriol Pellicer <oriol@elsud.org>\n"
 "Language-Team: \n"
@@ -246,6 +246,10 @@ msgstr ""
 
 #. TRANSLATORS: long date representation short dayname daynum short monthname hour:minute in strftime() format! See 'man strftime'
 msgid "%a %e/%m  %-H:%M"
+msgstr ""
+
+#, python-format
+msgid "%d"
 msgstr ""
 
 #, python-format
@@ -1461,9 +1465,6 @@ msgstr ""
 msgid "Aruba"
 msgstr ""
 
-msgid "As defined by the skin"
-msgstr ""
-
 #
 msgid "Ask user"
 msgstr ""
@@ -2340,6 +2341,11 @@ msgstr "Canal"
 msgid "Channel Info"
 msgstr "Canal"
 
+#
+#, fuzzy
+msgid "Channel Selection"
+msgstr "Selecció de canal"
+
 msgid "Channel button always changes sides"
 msgstr ""
 
@@ -2352,12 +2358,6 @@ msgstr "Menú de llista de canals"
 #, fuzzy
 msgid "Channel list type"
 msgstr "Menú de llista de canals"
-
-msgid "Channel list update Eventinfo delay"
-msgstr ""
-
-msgid "Channel list update interval for Eventinfo on cursor moving"
-msgstr ""
 
 #
 msgid "Channel not in services list"
@@ -3616,11 +3616,6 @@ msgstr ""
 
 #
 #, fuzzy
-msgid "Default recording type"
-msgstr "Iniciar gravació?"
-
-#
-#, fuzzy
 msgid "Default settings"
 msgstr "Config OSD"
 
@@ -3712,6 +3707,9 @@ msgid "Delay in miliseconds before start of scrolling text on display."
 msgstr ""
 
 msgid "Delay in miliseconds between scrolling characters on display."
+msgstr ""
+
+msgid "Delay when closing a stream relay service before reallocating the tuner for another service. Using '0' is only recommended for boxes with multiple satellite tuners."
 msgstr ""
 
 #
@@ -3806,9 +3804,6 @@ msgid "Denmark"
 msgstr ""
 
 msgid "Depth"
-msgstr ""
-
-msgid "Descramble & record ECM gives the option to descramble afterwards if descrambling on recording failed. 'Don't descramble, record ECM' save a scramble recording that can be descrambled on playback. 'Normal' means descramble the recording and don't record ECM."
 msgstr ""
 
 msgid "Descramble receiving http streams"
@@ -6176,6 +6171,9 @@ msgstr "Posar el disc dur en repòs després de"
 msgid "Hardware Accelerated"
 msgstr ""
 
+msgid "Hardware: "
+msgstr ""
+
 msgid "HddMount"
 msgstr ""
 
@@ -6212,9 +6210,6 @@ msgid "Hide channel list in radio mode"
 msgstr ""
 
 msgid "Hide known extensions"
-msgstr ""
-
-msgid "Hide number markers"
 msgstr ""
 
 #
@@ -6488,6 +6483,9 @@ msgstr ""
 msgid ""
 "Image to install is invalid\n"
 "%s"
+msgstr ""
+
+msgid "Image: "
 msgstr ""
 
 msgid "ImageWizard"
@@ -7388,6 +7386,9 @@ msgstr ""
 #, fuzzy
 msgid "MB"
 msgstr "B"
+
+msgid "MENU"
+msgstr ""
 
 msgid "MHz"
 msgstr ""
@@ -8600,6 +8601,11 @@ msgid "Number or SMS style data entry"
 msgstr ""
 
 #
+#, fuzzy
+msgid "OE Version: "
+msgstr "Model: "
+
+#
 msgid "OK"
 msgstr "Bé"
 
@@ -8922,6 +8928,12 @@ msgid "POT-Creation Date"
 msgstr ""
 
 msgid "PPanel"
+msgstr ""
+
+msgid "PREVIOUS"
+msgstr ""
+
+msgid "PVR"
 msgstr ""
 
 #
@@ -10041,6 +10053,11 @@ msgstr ""
 #, fuzzy
 msgid "Python version: "
 msgstr "Nova versió:"
+
+#
+#, fuzzy
+msgid "Pythonscript"
+msgstr "Descripció"
 
 msgid "Qatar"
 msgstr ""
@@ -11764,6 +11781,9 @@ msgstr ""
 msgid "Serial No"
 msgstr ""
 
+msgid "Serial: "
+msgstr ""
+
 #, python-format
 msgid "Serial: %s"
 msgstr ""
@@ -11829,6 +11849,11 @@ msgstr ""
 
 #
 #, fuzzy
+msgid "Service info font size"
+msgstr "Info del canal"
+
+#
+#, fuzzy
 msgid ""
 "Service invalid!\n"
 "(Timeout reading PMT)"
@@ -11843,12 +11868,22 @@ msgstr "Recerca de canal"
 
 #
 #, fuzzy
+msgid "Service name font size"
+msgstr "Recerca de canal"
+
+#
+#, fuzzy
 msgid ""
 "Service not found!\n"
 "(SID not found in PAT)"
 msgstr ""
 "No s'ha trobat el canal!\n"
 "(No s'ha trobat el SID al PAT)"
+
+#
+#, fuzzy
+msgid "Service number font size"
+msgstr "Subtítols"
 
 msgid "Service reference"
 msgstr ""
@@ -12209,6 +12244,9 @@ msgid "Show directories first"
 msgstr "cancel·lar l'edició de preferits"
 
 msgid "Show directories on first or last in list.(must restart File Commander)"
+msgstr ""
+
+msgid "Show disabled timers (local only)"
 msgstr ""
 
 msgid "Show disclaimer"
@@ -12590,11 +12628,6 @@ msgstr "Senzill"
 #
 msgid "Single EPG"
 msgstr "EPG senzill"
-
-#
-#, fuzzy
-msgid "Single line mode"
-msgstr "Info del canal"
 
 #
 msgid "Single satellite"
@@ -13240,6 +13273,9 @@ msgstr "Posició guardada"
 msgid "Stream"
 msgstr ""
 
+msgid "Stream Relay delay"
+msgstr ""
+
 msgid "Stream request"
 msgstr ""
 
@@ -13770,6 +13806,11 @@ msgid ""
 "Make sure you select a writable directory instead."
 msgstr ""
 
+msgid ""
+"The enigma.info file for the boxinformation is not available or the content is invalid.\n"
+"Press any key to continue?"
+msgstr ""
+
 #
 msgid "The following files were found..."
 msgstr ""
@@ -13926,6 +13967,9 @@ msgstr ""
 
 #
 msgid "This DVD RW medium is already formatted - reformatting will erase all content on the disc."
+msgstr ""
+
+msgid "This allows you to change the font size relative to skin size, so 1 increases by 1 point size, and -1 decreases by 1 point size"
 msgstr ""
 
 msgid "This allows you to set the number of digits to 5, if you have more than 9999 channels."
@@ -14981,6 +15025,11 @@ msgstr ""
 msgid "Use power measurement"
 msgstr "Utilitza les mesures de corrent"
 
+#
+#, fuzzy
+msgid "Use skin default"
+msgstr "Restaurar"
+
 msgid "Use the cursor keys to select an installed image and then Start button."
 msgstr ""
 
@@ -15670,9 +15719,6 @@ msgid "When enabled, it will automatically play to the last saved radio service 
 msgstr ""
 
 msgid "When enabled, measure power consumption to detect when the rotor stops turning (when supported by the tuner)."
-msgstr ""
-
-msgid "When enabled, number markers will be hidden."
 msgstr ""
 
 msgid "When enabled, reformat subtitles to match the width of the screen."
@@ -17810,3 +17856,9 @@ msgstr ""
 #
 msgid "zapped"
 msgstr "zappejat"
+
+msgid "°E"
+msgstr ""
+
+msgid "°W"
+msgstr ""
