--- a/po/enigma2.pot
+++ b/po/enigma2.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-10-27 20:38+0200\n"
+"POT-Creation-Date: 2024-01-06 14:27+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -223,6 +223,10 @@ msgstr ""
 
 #. TRANSLATORS: long date representation short dayname daynum short monthname hour:minute in strftime() format! See 'man strftime'
 msgid "%a %e/%m  %-H:%M"
+msgstr ""
+
+#, python-format
+msgid "%d"
 msgstr ""
 
 #, python-format
@@ -1154,9 +1158,6 @@ msgid "Arts/Culture (without music)"
 msgstr ""
 
 msgid "Aruba"
-msgstr ""
-
-msgid "As defined by the skin"
 msgstr ""
 
 msgid "Ask user"
@@ -4281,6 +4282,9 @@ msgstr ""
 msgid "Hardware Accelerated"
 msgstr ""
 
+msgid "Hardware: "
+msgstr ""
+
 #, python-format
 msgid "Heads: %s (max) %s (current)"
 msgstr ""
@@ -4511,6 +4515,9 @@ msgstr ""
 msgid ""
 "Image to install is invalid\n"
 "%s"
+msgstr ""
+
+msgid "Image: "
 msgstr ""
 
 msgid "ImageWizard"
@@ -5144,6 +5151,9 @@ msgid "MAC:"
 msgstr ""
 
 msgid "MB"
+msgstr ""
+
+msgid "MENU"
 msgstr ""
 
 msgid "MHz"
@@ -6012,6 +6022,9 @@ msgstr ""
 msgid "Number or SMS style data entry"
 msgstr ""
 
+msgid "OE Version: "
+msgstr ""
+
 msgid "OK"
 msgstr ""
 
@@ -6238,6 +6251,12 @@ msgid "POT-Creation Date"
 msgstr ""
 
 msgid "PPanel"
+msgstr ""
+
+msgid "PREVIOUS"
+msgstr ""
+
+msgid "PVR"
 msgstr ""
 
 msgid "Package list update"
@@ -6960,6 +6979,9 @@ msgid "Python frontend for /tmp/mmi.socket"
 msgstr ""
 
 msgid "Python version: "
+msgstr ""
+
+msgid "Pythonscript"
 msgstr ""
 
 msgid "Qatar"
@@ -8181,6 +8203,9 @@ msgstr ""
 msgid "Serial No"
 msgstr ""
 
+msgid "Serial: "
+msgstr ""
+
 #, python-format
 msgid "Serial: %s"
 msgstr ""
@@ -8474,6 +8499,9 @@ msgstr ""
 msgid "Show directories first"
 msgstr ""
 
+msgid "Show disabled timers (local only)"
+msgstr ""
+
 msgid "Show disclaimer"
 msgstr ""
 
@@ -8683,9 +8711,6 @@ msgid "Single"
 msgstr ""
 
 msgid "Single EPG"
-msgstr ""
-
-msgid "Single line mode"
 msgstr ""
 
 msgid "Single satellite"
@@ -9505,6 +9530,11 @@ msgstr ""
 msgid ""
 "The directory %s is not writable.\n"
 "Make sure you select a writable directory instead."
+msgstr ""
+
+msgid ""
+"The enigma.info file for the boxinformation is not available or the content is invalid.\n"
+"Press any key to continue?"
 msgstr ""
 
 msgid "The following files were found..."
@@ -10425,6 +10455,9 @@ msgid "Use official channel numbering"
 msgstr ""
 
 msgid "Use power measurement"
+msgstr ""
+
+msgid "Use skin default"
 msgstr ""
 
 msgid "Use the cursor keys to select an installed image and then Start button."
@@ -12476,6 +12509,12 @@ msgstr ""
 msgid "zapped"
 msgstr ""
 
+msgid "°E"
+msgstr ""
+
+msgid "°W"
+msgstr ""
+
 msgid "C"
 msgstr ""
 
@@ -12770,10 +12809,7 @@ msgstr ""
 msgid "Change bouquets in quickzap"
 msgstr ""
 
-msgid "Channel list update Eventinfo delay"
-msgstr ""
-
-msgid "Channel list update interval for Eventinfo on cursor moving"
+msgid "Channel Selection"
 msgstr ""
 
 msgid "Channel zap delay another button"
@@ -13088,9 +13124,6 @@ msgstr ""
 msgid "Deep Standby LED"
 msgstr ""
 
-msgid "Default recording type"
-msgstr ""
-
 msgid "Default timer type"
 msgstr ""
 
@@ -13109,7 +13142,7 @@ msgstr ""
 msgid "Delay in miliseconds between scrolling characters on display."
 msgstr ""
 
-msgid "Descramble & record ECM gives the option to descramble afterwards if descrambling on recording failed. 'Don't descramble, record ECM' save a scramble recording that can be descrambled on playback. 'Normal' means descramble the recording and don't record ECM."
+msgid "Delay when closing a stream relay service before reallocating the tuner for another service. Using '0' is only recommended for boxes with multiple satellite tuners."
 msgstr ""
 
 msgid "Descramble receiving http streams"
@@ -13272,9 +13305,6 @@ msgid "Height"
 msgstr ""
 
 msgid "Hide channel list in radio mode"
-msgstr ""
-
-msgid "Hide number markers"
 msgstr ""
 
 msgid "Hide zap errors"
@@ -13562,6 +13592,15 @@ msgstr ""
 msgid "Select timezone in the area or region."
 msgstr ""
 
+msgid "Service info font size"
+msgstr ""
+
+msgid "Service name font size"
+msgstr ""
+
+msgid "Service number font size"
+msgstr ""
+
 msgid "Set CI assignment for detection of available services."
 msgstr ""
 
@@ -13715,6 +13754,9 @@ msgstr ""
 msgid "Startup to Standby"
 msgstr ""
 
+msgid "Stream Relay delay"
+msgstr ""
+
 msgid "Subtitle alignment"
 msgstr ""
 
@@ -13791,6 +13833,9 @@ msgid "The stored EPG data will be read every (hours)"
 msgstr ""
 
 msgid "The width of the picture. The input will be scaled to match this value."
+msgstr ""
+
+msgid "This allows you to change the font size relative to skin size, so 1 increases by 1 point size, and -1 decreases by 1 point size"
 msgstr ""
 
 msgid "This allows you to set the number of digits to 5, if you have more than 9999 channels."
@@ -13977,9 +14022,6 @@ msgid "When enabled, it will automatically play to the last saved radio service 
 msgstr ""
 
 msgid "When enabled, measure power consumption to detect when the rotor stops turning (when supported by the tuner)."
-msgstr ""
-
-msgid "When enabled, number markers will be hidden."
 msgstr ""
 
 msgid "When enabled, reformat subtitles to match the width of the screen."
