--- a/po/lt.po
+++ b/po/lt.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2 teamBlue\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-10-27 20:38+0200\n"
+"POT-Creation-Date: 2024-01-06 14:27+0100\n"
 "PO-Revision-Date: 2020-02-29 08:52+0200\n"
 "Last-Translator: Audronis Grincevicius <adga45@gmail.com>\n"
 "Language-Team: Adga (C) <adga45@gmail.com>\n"
@@ -236,6 +236,10 @@ msgstr ""
 
 #. TRANSLATORS: long date representation short dayname daynum short monthname hour:minute in strftime() format! See 'man strftime'
 msgid "%a %e/%m  %-H:%M"
+msgstr ""
+
+#, python-format
+msgid "%d"
 msgstr ""
 
 #, python-format
@@ -1344,9 +1348,6 @@ msgstr ""
 msgid "Aruba"
 msgstr ""
 
-msgid "As defined by the skin"
-msgstr ""
-
 msgid "Ask user"
 msgstr "Klausti vartotojo"
 
@@ -2150,6 +2151,10 @@ msgstr "Kanalas"
 msgid "Channel Info"
 msgstr "Kanalas"
 
+#, fuzzy
+msgid "Channel Selection"
+msgstr "Kanalo pasirinkimas"
+
 msgid "Channel button always changes sides"
 msgstr ""
 
@@ -2160,12 +2165,6 @@ msgstr "Kanalų meniu sąrašas"
 #, fuzzy
 msgid "Channel list type"
 msgstr "Kanalų meniu sąrašas"
-
-msgid "Channel list update Eventinfo delay"
-msgstr ""
-
-msgid "Channel list update interval for Eventinfo on cursor moving"
-msgstr ""
 
 msgid "Channel not in services list"
 msgstr "Kanalo nėra kanalų sąraše"
@@ -3338,10 +3337,6 @@ msgid "Default movie location"
 msgstr "Numatyta filmų vieta"
 
 #, fuzzy
-msgid "Default recording type"
-msgstr "Pradėti įrašymą?"
-
-#, fuzzy
 msgid "Default settings"
 msgstr "Numatytieji nustatymai"
 
@@ -3432,6 +3427,9 @@ msgstr ""
 msgid "Delay in miliseconds between scrolling characters on display."
 msgstr ""
 
+msgid "Delay when closing a stream relay service before reallocating the tuner for another service. Using '0' is only recommended for boxes with multiple satellite tuners."
+msgstr ""
+
 msgid "Delete"
 msgstr "Trinti"
 
@@ -3510,9 +3508,6 @@ msgid "Denmark"
 msgstr ""
 
 msgid "Depth"
-msgstr ""
-
-msgid "Descramble & record ECM gives the option to descramble afterwards if descrambling on recording failed. 'Don't descramble, record ECM' save a scramble recording that can be descrambled on playback. 'Normal' means descramble the recording and don't record ECM."
 msgstr ""
 
 msgid "Descramble receiving http streams"
@@ -5661,6 +5656,9 @@ msgstr "Kietas diskas išsijungs po"
 msgid "Hardware Accelerated"
 msgstr ""
 
+msgid "Hardware: "
+msgstr ""
+
 msgid "HddMount"
 msgstr ""
 
@@ -5695,9 +5693,6 @@ msgid "Hide channel list in radio mode"
 msgstr ""
 
 msgid "Hide known extensions"
-msgstr ""
-
-msgid "Hide number markers"
 msgstr ""
 
 #, fuzzy
@@ -5960,6 +5955,10 @@ msgid ""
 "Image to install is invalid\n"
 "%s"
 msgstr ""
+
+#, fuzzy
+msgid "Image: "
+msgstr "Atgal"
 
 msgid "ImageWizard"
 msgstr ""
@@ -6784,6 +6783,9 @@ msgstr ""
 #, fuzzy
 msgid "MB"
 msgstr "B"
+
+msgid "MENU"
+msgstr ""
 
 msgid "MHz"
 msgstr ""
@@ -7878,6 +7880,10 @@ msgstr ""
 msgid "Number or SMS style data entry"
 msgstr ""
 
+#, fuzzy
+msgid "OE Version: "
+msgstr "Signalas:"
+
 msgid "OK"
 msgstr "Gerai"
 
@@ -8172,6 +8178,12 @@ msgid "POT-Creation Date"
 msgstr ""
 
 msgid "PPanel"
+msgstr ""
+
+msgid "PREVIOUS"
+msgstr ""
+
+msgid "PVR"
 msgstr ""
 
 msgid "Package list update"
@@ -9151,6 +9163,10 @@ msgstr "Python pradinė fazė dėl /tmp/mmi.socket"
 #, fuzzy
 msgid "Python version: "
 msgstr "Nauja versija:"
+
+#, fuzzy
+msgid "Pythonscript"
+msgstr "Aprašymas"
 
 msgid "Qatar"
 msgstr ""
@@ -10691,6 +10707,10 @@ msgstr "Serbų"
 msgid "Serial No"
 msgstr "Signalas:"
 
+#, fuzzy
+msgid "Serial: "
+msgstr "Signalas:"
+
 #, fuzzy, python-format
 msgid "Serial: %s"
 msgstr "Signalas:"
@@ -10745,6 +10765,10 @@ msgstr ""
 msgid "Service info - tuner setting values"
 msgstr ""
 
+#, fuzzy
+msgid "Service info font size"
+msgstr "Kanalo informacija"
+
 msgid ""
 "Service invalid!\n"
 "(Timeout reading PMT)"
@@ -10756,12 +10780,20 @@ msgstr ""
 msgid "Service name"
 msgstr "Kanalų skanavimas"
 
+#, fuzzy
+msgid "Service name font size"
+msgstr "Kanalų skanavimas"
+
 msgid ""
 "Service not found!\n"
 "(SID not found in PAT)"
 msgstr ""
 "Kanalas nerastas!\n"
 "(SID nėra  PAT)"
+
+#, fuzzy
+msgid "Service number font size"
+msgstr "Subtitrai"
 
 msgid "Service reference"
 msgstr "Kanalo nuoroda"
@@ -11106,6 +11138,9 @@ msgstr "nutraukti mėgstamiausių redagavimą"
 msgid "Show directories on first or last in list.(must restart File Commander)"
 msgstr ""
 
+msgid "Show disabled timers (local only)"
+msgstr ""
+
 #, fuzzy
 msgid "Show disclaimer"
 msgstr "rodyti informacijos eilutę"
@@ -11448,10 +11483,6 @@ msgstr "Vienintelis"
 
 msgid "Single EPG"
 msgstr "Kanalo EPG"
-
-#, fuzzy
-msgid "Single line mode"
-msgstr "Išsirinkite vaizdo būdą"
 
 msgid "Single satellite"
 msgstr "Vienintelis palydovas"
@@ -12025,6 +12056,9 @@ msgstr "Išsaugota padėtis"
 msgid "Stream"
 msgstr ""
 
+msgid "Stream Relay delay"
+msgstr ""
+
 msgid "Stream request"
 msgstr ""
 
@@ -12525,6 +12559,11 @@ msgstr ""
 "Direktorija % s nėra įrašoma.\n"
 "Įsitikinkite, kad pasirinkote rašymui tinkamą katalogą."
 
+msgid ""
+"The enigma.info file for the boxinformation is not available or the content is invalid.\n"
+"Press any key to continue?"
+msgstr ""
+
 msgid "The following files were found..."
 msgstr "Kiti failai buvo surasti..."
 
@@ -12679,6 +12718,9 @@ msgstr ""
 
 msgid "This DVD RW medium is already formatted - reformatting will erase all content on the disc."
 msgstr "Šis DVD RW diskas jau yra suformatuotas - formatavimas iš naujo, ištrins visą disko turinį."
+
+msgid "This allows you to change the font size relative to skin size, so 1 increases by 1 point size, and -1 decreases by 1 point size"
+msgstr ""
 
 msgid "This allows you to set the number of digits to 5, if you have more than 9999 channels."
 msgstr ""
@@ -13663,6 +13705,10 @@ msgstr ""
 msgid "Use power measurement"
 msgstr "Naudoti įtampos išmatavimus"
 
+#, fuzzy
+msgid "Use skin default"
+msgstr "numatytas sąrašo stilius"
+
 msgid "Use the cursor keys to select an installed image and then Start button."
 msgstr ""
 
@@ -14317,9 +14363,6 @@ msgid "When enabled, it will automatically play to the last saved radio service 
 msgstr ""
 
 msgid "When enabled, measure power consumption to detect when the rotor stops turning (when supported by the tuner)."
-msgstr ""
-
-msgid "When enabled, number markers will be hidden."
 msgstr ""
 
 msgid "When enabled, reformat subtitles to match the width of the screen."
@@ -16257,3 +16300,9 @@ msgstr ""
 
 msgid "zapped"
 msgstr "įjungta"
+
+msgid "°E"
+msgstr ""
+
+msgid "°W"
+msgstr ""
