--- a/po/nb.po
+++ b/po/nb.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-10-27 20:38+0200\n"
+"POT-Creation-Date: 2024-01-06 14:27+0100\n"
 "PO-Revision-Date: 2019-12-06 15:54+0100\n"
 "Last-Translator: GeirJ <dummy@dummy.com>\n"
 "Language-Team: GeirJ\n"
@@ -250,6 +250,10 @@ msgstr ""
 
 #. TRANSLATORS: long date representation short dayname daynum short monthname hour:minute in strftime() format! See 'man strftime'
 msgid "%a %e/%m  %-H:%M"
+msgstr ""
+
+#, python-format
+msgid "%d"
 msgstr ""
 
 #, python-format
@@ -1433,9 +1437,6 @@ msgstr "kunst/kultur (uten musikk, generelt)"
 msgid "Aruba"
 msgstr ""
 
-msgid "As defined by the skin"
-msgstr ""
-
 #
 msgid "Ask user"
 msgstr "Spør bruker"
@@ -2307,6 +2308,10 @@ msgstr "Lyd kanal valg"
 msgid "Channel Info"
 msgstr "Kanal info"
 
+#, fuzzy
+msgid "Channel Selection"
+msgstr "Kanalvalg"
+
 msgid "Channel button always changes sides"
 msgstr ""
 
@@ -2318,12 +2323,6 @@ msgstr "Kanalliste-meny"
 #
 msgid "Channel list type"
 msgstr "Kanalliste-valg"
-
-msgid "Channel list update Eventinfo delay"
-msgstr ""
-
-msgid "Channel list update interval for Eventinfo on cursor moving"
-msgstr ""
 
 #
 msgid "Channel not in services list"
@@ -3594,10 +3593,6 @@ msgstr ""
 msgid "Default movie location"
 msgstr "Standard opptaksliste"
 
-#, fuzzy
-msgid "Default recording type"
-msgstr "Opptakstype"
-
 #
 msgid "Default settings"
 msgstr "Standardinnstilling"
@@ -3689,6 +3684,9 @@ msgstr "Forsinkelse i millisekunder før skrolling av tekst på display."
 msgid "Delay in miliseconds between scrolling characters on display."
 msgstr "Forsinkelse i millisekunder under skrolling av bokstaver på display."
 
+msgid "Delay when closing a stream relay service before reallocating the tuner for another service. Using '0' is only recommended for boxes with multiple satellite tuners."
+msgstr ""
+
 #
 msgid "Delete"
 msgstr "Slett"
@@ -3779,9 +3777,6 @@ msgstr ""
 
 msgid "Depth"
 msgstr "Dybde"
-
-msgid "Descramble & record ECM gives the option to descramble afterwards if descrambling on recording failed. 'Don't descramble, record ECM' save a scramble recording that can be descrambled on playback. 'Normal' means descramble the recording and don't record ECM."
-msgstr ""
 
 #, fuzzy
 msgid "Descramble receiving http streams"
@@ -6144,6 +6139,10 @@ msgid "Hardware Accelerated"
 msgstr ""
 
 #, fuzzy
+msgid "Hardware: "
+msgstr "Maskinvare:"
+
+#, fuzzy
 msgid "HddMount"
 msgstr "Monter"
 
@@ -6182,9 +6181,6 @@ msgstr "Skjul kanalliste i radiomodus"
 #
 msgid "Hide known extensions"
 msgstr "Skjul kjente utvidelser"
-
-msgid "Hide number markers"
-msgstr "Skjul nummer markører"
 
 msgid "Hide parentel locked services"
 msgstr "Skjul låste tjenester i foreldrekontroll"
@@ -6463,6 +6459,11 @@ msgid ""
 "Image to install is invalid\n"
 "%s"
 msgstr ""
+
+#
+#, fuzzy
+msgid "Image: "
+msgstr "Tilbake"
 
 msgid "ImageWizard"
 msgstr ""
@@ -7363,6 +7364,9 @@ msgid "MAC:"
 msgstr ""
 
 msgid "MB"
+msgstr ""
+
+msgid "MENU"
 msgstr ""
 
 msgid "MHz"
@@ -8560,6 +8564,10 @@ msgstr "Nummer av gjentatt tekst i display."
 msgid "Number or SMS style data entry"
 msgstr ""
 
+#, fuzzy
+msgid "OE Version: "
+msgstr "Enigma2 skin velger"
+
 #
 msgid "OK"
 msgstr ""
@@ -8881,6 +8889,12 @@ msgstr ""
 #
 msgid "PPanel"
 msgstr "PPanel"
+
+msgid "PREVIOUS"
+msgstr ""
+
+msgid "PVR"
+msgstr ""
 
 #
 msgid "Package list update"
@@ -9951,6 +9965,11 @@ msgstr ""
 #
 msgid "Python version: "
 msgstr "Python versjon: "
+
+#
+#, fuzzy
+msgid "Pythonscript"
+msgstr "Skript"
 
 msgid "Qatar"
 msgstr ""
@@ -11606,6 +11625,11 @@ msgid "Serial No"
 msgstr "Signal:"
 
 #
+#, fuzzy
+msgid "Serial: "
+msgstr "Signal:"
+
+#
 #, fuzzy, python-format
 msgid "Serial: %s"
 msgstr "Signal:"
@@ -11663,6 +11687,10 @@ msgstr ""
 msgid "Service info - tuner setting values"
 msgstr ""
 
+#, fuzzy
+msgid "Service info font size"
+msgstr "Kanalinfo"
+
 msgid ""
 "Service invalid!\n"
 "(Timeout reading PMT)"
@@ -11674,12 +11702,21 @@ msgstr ""
 msgid "Service name"
 msgstr "Kanalnavn"
 
+#
+#, fuzzy
+msgid "Service name font size"
+msgstr "Kanalnavn"
+
 msgid ""
 "Service not found!\n"
 "(SID not found in PAT)"
 msgstr ""
 "Kanalen ble ikke funnet!\n"
 "(SID ikke funnet i PAT)"
+
+#, fuzzy
+msgid "Service number font size"
+msgstr "Undertekst skriftstørrelse"
 
 msgid "Service reference"
 msgstr "Kanalreferanse"
@@ -12032,6 +12069,9 @@ msgid "Show directories first"
 msgstr "Vis favoritt lister"
 
 msgid "Show directories on first or last in list.(must restart File Commander)"
+msgstr ""
+
+msgid "Show disabled timers (local only)"
 msgstr ""
 
 msgid "Show disclaimer"
@@ -12401,10 +12441,6 @@ msgstr "Enkel"
 #
 msgid "Single EPG"
 msgstr "Enkel EPG"
-
-#, fuzzy
-msgid "Single line mode"
-msgstr "Velg video modus"
 
 msgid "Single satellite"
 msgstr "En satellitt posisjon"
@@ -13010,6 +13046,10 @@ msgstr "Lagret posisjon"
 msgid "Stream"
 msgstr "Datastrøm"
 
+#, fuzzy
+msgid "Stream Relay delay"
+msgstr "Skroll forsinkelse"
+
 msgid "Stream request"
 msgstr "Datastrøm forespørsel"
 
@@ -13535,6 +13575,11 @@ msgstr ""
 "Katalogen%s er ikke skrivbar.\n"
 "Pass på at du velger en skrivbar katalog."
 
+msgid ""
+"The enigma.info file for the boxinformation is not available or the content is invalid.\n"
+"Press any key to continue?"
+msgstr ""
+
 #
 msgid "The following files were found..."
 msgstr "Følgende filer ble funnet..."
@@ -13703,6 +13748,9 @@ msgstr ""
 #
 msgid "This DVD RW medium is already formatted - reformatting will erase all content on the disc."
 msgstr "Denne DVD RW er allerede formatert - reformatering sletter alt innhold på platen."
+
+msgid "This allows you to change the font size relative to skin size, so 1 increases by 1 point size, and -1 decreases by 1 point size"
+msgstr ""
 
 msgid "This allows you to set the number of digits to 5, if you have more than 9999 channels."
 msgstr ""
@@ -14779,6 +14827,11 @@ msgstr "Undertekst posisjon"
 msgid "Use power measurement"
 msgstr "Bruk strøm-måling"
 
+#
+#, fuzzy
+msgid "Use skin default"
+msgstr "Sett standard"
+
 msgid "Use the cursor keys to select an installed image and then Start button."
 msgstr ""
 
@@ -15484,10 +15537,6 @@ msgstr "Når aktivert, vil mottakeren automatisk bruke lyd som tidligere ble akt
 
 msgid "When enabled, measure power consumption to detect when the rotor stops turning (when supported by the tuner)."
 msgstr "Når aktivert, vil motorens strømforbruk bli målt for å oppdage når motorbevegelsen stopper (hvis det støttes av tuner)."
-
-#, fuzzy
-msgid "When enabled, number markers will be hidden."
-msgstr "Når aktivert, vises ikke nummer markører."
 
 msgid "When enabled, reformat subtitles to match the width of the screen."
 msgstr "Når aktivert, vil undertekst omformes til å passe skjermbredden"
@@ -17649,3 +17698,9 @@ msgstr "gå til og spill inn"
 #
 msgid "zapped"
 msgstr "gått til"
+
+msgid "°E"
+msgstr ""
+
+msgid "°W"
+msgstr ""
