--- a/po/nn.po
+++ b/po/nn.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-10-27 20:38+0200\n"
+"POT-Creation-Date: 2024-01-06 14:27+0100\n"
 "PO-Revision-Date: 2013-10-23 19:15+0100\n"
 "Last-Translator: andy1 <dmmm8000pvr@gmail.com>\n"
 "Language-Team: none\n"
@@ -239,6 +239,10 @@ msgstr ""
 
 #. TRANSLATORS: long date representation short dayname daynum short monthname hour:minute in strftime() format! See 'man strftime'
 msgid "%a %e/%m  %-H:%M"
+msgstr ""
+
+#, python-format
+msgid "%d"
 msgstr ""
 
 #, python-format
@@ -1402,9 +1406,6 @@ msgstr "kunst/kultur (uten musikk, generelt)"
 msgid "Aruba"
 msgstr ""
 
-msgid "As defined by the skin"
-msgstr ""
-
 #
 msgid "Ask user"
 msgstr "Spør bruker"
@@ -2261,6 +2262,10 @@ msgstr "Kanal"
 msgid "Channel Info"
 msgstr ""
 
+#, fuzzy
+msgid "Channel Selection"
+msgstr "Kanalvalg"
+
 msgid "Channel button always changes sides"
 msgstr ""
 
@@ -2272,12 +2277,6 @@ msgstr "Kanalliste-meny"
 #
 msgid "Channel list type"
 msgstr "Kanalliste-valg"
-
-msgid "Channel list update Eventinfo delay"
-msgstr ""
-
-msgid "Channel list update interval for Eventinfo on cursor moving"
-msgstr ""
 
 #
 msgid "Channel not in services list"
@@ -3519,10 +3518,6 @@ msgstr ""
 msgid "Default movie location"
 msgstr "Standard opptaksliste"
 
-#, fuzzy
-msgid "Default recording type"
-msgstr "Opptakstype"
-
 #
 msgid "Default settings"
 msgstr "Standardinnstilling"
@@ -3614,6 +3609,9 @@ msgstr ""
 msgid "Delay in miliseconds between scrolling characters on display."
 msgstr ""
 
+msgid "Delay when closing a stream relay service before reallocating the tuner for another service. Using '0' is only recommended for boxes with multiple satellite tuners."
+msgstr ""
+
 #
 msgid "Delete"
 msgstr "Slette"
@@ -3703,9 +3701,6 @@ msgstr ""
 
 msgid "Depth"
 msgstr "Dybde"
-
-msgid "Descramble & record ECM gives the option to descramble afterwards if descrambling on recording failed. 'Don't descramble, record ECM' save a scramble recording that can be descrambled on playback. 'Normal' means descramble the recording and don't record ECM."
-msgstr ""
 
 msgid "Descramble receiving http streams"
 msgstr ""
@@ -5983,6 +5978,10 @@ msgid "Hardware Accelerated"
 msgstr ""
 
 #, fuzzy
+msgid "Hardware: "
+msgstr "Maskinvare:"
+
+#, fuzzy
 msgid "HddMount"
 msgstr "Montere"
 
@@ -6020,9 +6019,6 @@ msgstr "Skjul kanalliste i radiomodus"
 #
 msgid "Hide known extensions"
 msgstr "Skjul kjente utvidelser"
-
-msgid "Hide number markers"
-msgstr "Skjul nummermarkører"
 
 msgid "Hide parentel locked services"
 msgstr ""
@@ -6293,6 +6289,11 @@ msgid ""
 "Image to install is invalid\n"
 "%s"
 msgstr ""
+
+#
+#, fuzzy
+msgid "Image: "
+msgstr "Tilbake"
 
 msgid "ImageWizard"
 msgstr ""
@@ -7181,6 +7182,9 @@ msgid "MAC:"
 msgstr ""
 
 msgid "MB"
+msgstr ""
+
+msgid "MENU"
 msgstr ""
 
 msgid "MHz"
@@ -8361,6 +8365,11 @@ msgid "Number or SMS style data entry"
 msgstr ""
 
 #
+#, fuzzy
+msgid "OE Version: "
+msgstr "Linuxkjerne versjon: "
+
+#
 msgid "OK"
 msgstr ""
 
@@ -8668,6 +8677,12 @@ msgid "POT-Creation Date"
 msgstr ""
 
 msgid "PPanel"
+msgstr ""
+
+msgid "PREVIOUS"
+msgstr ""
+
+msgid "PVR"
 msgstr ""
 
 #
@@ -9695,6 +9710,9 @@ msgid "Python frontend for /tmp/mmi.socket"
 msgstr ""
 
 msgid "Python version: "
+msgstr ""
+
+msgid "Pythonscript"
 msgstr ""
 
 msgid "Qatar"
@@ -11311,6 +11329,11 @@ msgid "Serial No"
 msgstr "Signal:"
 
 #
+#, fuzzy
+msgid "Serial: "
+msgstr "Signal:"
+
+#
 #, fuzzy, python-format
 msgid "Serial: %s"
 msgstr "Signal:"
@@ -11364,6 +11387,10 @@ msgstr ""
 msgid "Service info - tuner setting values"
 msgstr ""
 
+#, fuzzy
+msgid "Service info font size"
+msgstr "Kanalinfo"
+
 msgid ""
 "Service invalid!\n"
 "(Timeout reading PMT)"
@@ -11375,12 +11402,21 @@ msgstr ""
 msgid "Service name"
 msgstr "Kanalnavn"
 
+#
+#, fuzzy
+msgid "Service name font size"
+msgstr "Kanalnavn"
+
 msgid ""
 "Service not found!\n"
 "(SID not found in PAT)"
 msgstr ""
 "Kanalen ble ikke funnet!\n"
 "(SID ikke funnet i PAT)"
+
+#, fuzzy
+msgid "Service number font size"
+msgstr "Undertekst skriftstørrelse"
 
 msgid "Service reference"
 msgstr "Kanalreferanse"
@@ -11722,6 +11758,9 @@ msgid "Show directories first"
 msgstr ""
 
 msgid "Show directories on first or last in list.(must restart File Commander)"
+msgstr ""
+
+msgid "Show disabled timers (local only)"
 msgstr ""
 
 #, fuzzy
@@ -12069,11 +12108,6 @@ msgstr "Enkel"
 #
 msgid "Single EPG"
 msgstr "Enkel EPG"
-
-#
-#, fuzzy
-msgid "Single line mode"
-msgstr "Velg video modus"
 
 msgid "Single satellite"
 msgstr "En satellitt"
@@ -12681,6 +12715,9 @@ msgstr "Lagret posisjon"
 msgid "Stream"
 msgstr "Datastrøm"
 
+msgid "Stream Relay delay"
+msgstr ""
+
 msgid "Stream request"
 msgstr "Datastrøm forespørsel"
 
@@ -13194,6 +13231,11 @@ msgstr ""
 "Katalogen%s er ikke skrivbar.\n"
 "Pass på at du velger en skrivbar katalog."
 
+msgid ""
+"The enigma.info file for the boxinformation is not available or the content is invalid.\n"
+"Press any key to continue?"
+msgstr ""
+
 #
 msgid "The following files were found..."
 msgstr "Følgende filer ble funnet..."
@@ -13360,6 +13402,9 @@ msgstr ""
 #
 msgid "This DVD RW medium is already formatted - reformatting will erase all content on the disc."
 msgstr "Denne DVD RW er allerede formatert - reformatering sletter alt innhold på platen."
+
+msgid "This allows you to change the font size relative to skin size, so 1 increases by 1 point size, and -1 decreases by 1 point size"
+msgstr ""
 
 msgid "This allows you to set the number of digits to 5, if you have more than 9999 channels."
 msgstr ""
@@ -14416,6 +14461,11 @@ msgstr "Bruk standard tekst-TV posisjon"
 msgid "Use power measurement"
 msgstr "Bruk strøm-måling"
 
+#
+#, fuzzy
+msgid "Use skin default"
+msgstr "standard liste"
+
 msgid "Use the cursor keys to select an installed image and then Start button."
 msgstr ""
 
@@ -15110,10 +15160,6 @@ msgstr "Når dette er valgt, vil mottakeren automatisk bruke lyd som tidligere b
 
 msgid "When enabled, measure power consumption to detect when the rotor stops turning (when supported by the tuner)."
 msgstr "Når dette er valgt, vil motorens strømforbruk bli målt for å oppdage når motorbevegelsen stopper (hvis det støttes av tuner)."
-
-#, fuzzy
-msgid "When enabled, number markers will be hidden."
-msgstr "Når dette er valgt, skjules nummermarkører."
 
 msgid "When enabled, reformat subtitles to match the width of the screen."
 msgstr ""
@@ -17238,3 +17284,9 @@ msgstr " gå til og spill inn"
 #
 msgid "zapped"
 msgstr "gått til"
+
+msgid "°E"
+msgstr ""
+
+msgid "°W"
+msgstr ""
