--- a/po/pt.po
+++ b/po/pt.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2 teamBlue\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-10-27 20:38+0200\n"
+"POT-Creation-Date: 2024-01-06 14:27+0100\n"
 "PO-Revision-Date: 2014-12-15 19:38-0000\n"
 "Last-Translator: Phenom <phenomxy@gmail.com>\n"
 "Language-Team: Muaitai <muaitai@gmail.com>\n"
@@ -254,6 +254,10 @@ msgstr "%a %e/%m"
 #. TRANSLATORS: long date representation short dayname daynum short monthname hour:minute in strftime() format! See 'man strftime'
 msgid "%a %e/%m  %-H:%M"
 msgstr "%a %e/%m  %-H:%M"
+
+#, python-format
+msgid "%d"
+msgstr ""
 
 #, python-format
 msgid "%d MB"
@@ -1513,9 +1517,6 @@ msgstr "arte/cultura"
 msgid "Aruba"
 msgstr ""
 
-msgid "As defined by the skin"
-msgstr ""
-
 #
 msgid "Ask user"
 msgstr "Perguntar ao utilizador"
@@ -2413,6 +2414,11 @@ msgstr "Canal"
 msgid "Channel Info"
 msgstr "Canal"
 
+#
+#, fuzzy
+msgid "Channel Selection"
+msgstr "Selecção de canal"
+
 msgid "Channel button always changes sides"
 msgstr ""
 
@@ -2425,12 +2431,6 @@ msgstr "Menu da Lista de Canais"
 #, fuzzy
 msgid "Channel list type"
 msgstr "Tipo da Lista de Canais"
-
-msgid "Channel list update Eventinfo delay"
-msgstr ""
-
-msgid "Channel list update interval for Eventinfo on cursor moving"
-msgstr ""
 
 #
 msgid "Channel not in services list"
@@ -3758,10 +3758,6 @@ msgstr ""
 msgid "Default movie location"
 msgstr "Localização padrão das gravações"
 
-#, fuzzy
-msgid "Default recording type"
-msgstr "Tipo de gravação"
-
 #
 #, fuzzy
 msgid "Default settings"
@@ -3855,6 +3851,9 @@ msgstr ""
 msgid "Delay in miliseconds between scrolling characters on display."
 msgstr ""
 
+msgid "Delay when closing a stream relay service before reallocating the tuner for another service. Using '0' is only recommended for boxes with multiple satellite tuners."
+msgstr ""
+
 #
 msgid "Delete"
 msgstr "Eliminar"
@@ -3944,9 +3943,6 @@ msgstr ""
 
 msgid "Depth"
 msgstr "Profundidade"
-
-msgid "Descramble & record ECM gives the option to descramble afterwards if descrambling on recording failed. 'Don't descramble, record ECM' save a scramble recording that can be descrambled on playback. 'Normal' means descramble the recording and don't record ECM."
-msgstr ""
 
 #, fuzzy
 msgid "Descramble receiving http streams"
@@ -6370,6 +6366,10 @@ msgid "Hardware Accelerated"
 msgstr ""
 
 #, fuzzy
+msgid "Hardware: "
+msgstr "Hardware: "
+
+#, fuzzy
 msgid "HddMount"
 msgstr "Montagem"
 
@@ -6407,9 +6407,6 @@ msgstr "Ocultar Lista de Canais no modo rádio"
 
 msgid "Hide known extensions"
 msgstr "Ocultar extensões conhecidas"
-
-msgid "Hide number markers"
-msgstr "Ocultar marcadores"
 
 #
 #, fuzzy
@@ -6692,6 +6689,11 @@ msgid ""
 "Image to install is invalid\n"
 "%s"
 msgstr ""
+
+#
+#, fuzzy
+msgid "Image: "
+msgstr "Voltar"
 
 msgid "ImageWizard"
 msgstr ""
@@ -7627,6 +7629,9 @@ msgstr ""
 #, fuzzy
 msgid "MB"
 msgstr "B"
+
+msgid "MENU"
+msgstr ""
 
 msgid "MHz"
 msgstr ""
@@ -8872,6 +8877,11 @@ msgstr ""
 msgid "Number or SMS style data entry"
 msgstr ""
 
+#
+#, fuzzy
+msgid "OE Version: "
+msgstr "Sinal: "
+
 msgid "OK"
 msgstr "OK"
 
@@ -9195,6 +9205,12 @@ msgid "POT-Creation Date"
 msgstr ""
 
 msgid "PPanel"
+msgstr ""
+
+msgid "PREVIOUS"
+msgstr ""
+
+msgid "PVR"
 msgstr ""
 
 #
@@ -10351,6 +10367,11 @@ msgstr "Interface Python para /tmp/mmi.socket"
 #, fuzzy
 msgid "Python version: "
 msgstr "Versão do Kernel: "
+
+#
+#, fuzzy
+msgid "Pythonscript"
+msgstr "Descrição"
 
 msgid "Qatar"
 msgstr ""
@@ -12136,6 +12157,11 @@ msgid "Serial No"
 msgstr "Sinal: "
 
 #
+#, fuzzy
+msgid "Serial: "
+msgstr "Sinal: "
+
+#
 #, fuzzy, python-format
 msgid "Serial: %s"
 msgstr "Sinal: "
@@ -12202,6 +12228,11 @@ msgid "Service info - tuner setting values"
 msgstr ""
 
 #
+#, fuzzy
+msgid "Service info font size"
+msgstr "Informação de canal"
+
+#
 msgid ""
 "Service invalid!\n"
 "(Timeout reading PMT)"
@@ -12213,6 +12244,10 @@ msgstr ""
 msgid "Service name"
 msgstr "Nome do canal"
 
+#, fuzzy
+msgid "Service name font size"
+msgstr "Nome do canal"
+
 #
 msgid ""
 "Service not found!\n"
@@ -12220,6 +12255,10 @@ msgid ""
 msgstr ""
 "Canal não encontrado!\n"
 "(SID não encontrado no PAT)"
+
+#, fuzzy
+msgid "Service number font size"
+msgstr "Tamanho de letra"
 
 msgid "Service reference"
 msgstr "Referência"
@@ -12594,6 +12633,9 @@ msgid "Show directories first"
 msgstr "cancelar a edição de favoritos"
 
 msgid "Show directories on first or last in list.(must restart File Commander)"
+msgstr ""
+
+msgid "Show disabled timers (local only)"
 msgstr ""
 
 #, fuzzy
@@ -12989,11 +13031,6 @@ msgstr "Único"
 #
 msgid "Single EPG"
 msgstr "Guia de Programação único"
-
-#
-#, fuzzy
-msgid "Single line mode"
-msgstr "Seleccione modo de vídeo"
 
 #
 msgid "Single satellite"
@@ -13644,6 +13681,10 @@ msgstr "Posição guardada"
 msgid "Stream"
 msgstr "Stream"
 
+#, fuzzy
+msgid "Stream Relay delay"
+msgstr "Sem atraso"
+
 msgid "Stream request"
 msgstr "Pedido de Stream"
 
@@ -14201,6 +14242,11 @@ msgstr ""
 "Não é possível escrever no directório %s.\n"
 "Certifique-se que selecciona um directório que possa ser escrito."
 
+msgid ""
+"The enigma.info file for the boxinformation is not available or the content is invalid.\n"
+"Press any key to continue?"
+msgstr ""
+
 #
 msgid "The following files were found..."
 msgstr "Os seguintes ficheiros foram encontrados..."
@@ -14375,6 +14421,9 @@ msgstr ""
 #
 msgid "This DVD RW medium is already formatted - reformatting will erase all content on the disc."
 msgstr "Este DVD RW já está formatado - reformatar irá apagar todo o conteúdo do disco."
+
+msgid "This allows you to change the font size relative to skin size, so 1 increases by 1 point size, and -1 decreases by 1 point size"
+msgstr ""
 
 msgid "This allows you to set the number of digits to 5, if you have more than 9999 channels."
 msgstr ""
@@ -15475,6 +15524,10 @@ msgstr "Usar a posição original do teletexto"
 msgid "Use power measurement"
 msgstr "Usar controlo da alimentação"
 
+#, fuzzy
+msgid "Use skin default"
+msgstr "Definir como padrão"
+
 msgid "Use the cursor keys to select an installed image and then Start button."
 msgstr ""
 
@@ -16234,10 +16287,6 @@ msgstr "Quando activado, o receptor irá usar a faixa de áudio que seleccionou 
 
 msgid "When enabled, measure power consumption to detect when the rotor stops turning (when supported by the tuner)."
 msgstr "Quando activado, medir o consumo de energia para detectar quando o motor pára de girar (quando suportado pelo sintonizador)."
-
-#, fuzzy
-msgid "When enabled, number markers will be hidden."
-msgstr "Quando activado, marcadores de número serão escondidos."
 
 #, fuzzy
 msgid "When enabled, reformat subtitles to match the width of the screen."
@@ -18457,3 +18506,9 @@ msgstr "zap e gravar"
 #
 msgid "zapped"
 msgstr "zapped"
+
+msgid "°E"
+msgstr ""
+
+msgid "°W"
+msgstr ""
