--- a/po/ro.po
+++ b/po/ro.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2 teamBlue\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-10-27 20:38+0200\n"
+"POT-Creation-Date: 2024-01-06 14:27+0100\n"
 "PO-Revision-Date: 2010-03-09 21:03+0100\n"
 "Last-Translator: \n"
 "Language-Team: HDTV ROMANIA(superonic,costel_mbc,neutrin,otheitis,cipy_1982,neutrin,runcanion)\n"
@@ -234,6 +234,10 @@ msgstr ""
 
 #. TRANSLATORS: long date representation short dayname daynum short monthname hour:minute in strftime() format! See 'man strftime'
 msgid "%a %e/%m  %-H:%M"
+msgstr ""
+
+#, python-format
+msgid "%d"
 msgstr ""
 
 #, python-format
@@ -1342,9 +1346,6 @@ msgstr ""
 msgid "Aruba"
 msgstr ""
 
-msgid "As defined by the skin"
-msgstr ""
-
 msgid "Ask user"
 msgstr "Intreaba pe user"
 
@@ -2143,6 +2144,10 @@ msgstr "Canal"
 msgid "Channel Info"
 msgstr "Canal"
 
+#, fuzzy
+msgid "Channel Selection"
+msgstr "Selectie canal"
+
 msgid "Channel button always changes sides"
 msgstr ""
 
@@ -2153,12 +2158,6 @@ msgstr "Meniul lista de canale"
 #, fuzzy
 msgid "Channel list type"
 msgstr "Meniul lista de canale"
-
-msgid "Channel list update Eventinfo delay"
-msgstr ""
-
-msgid "Channel list update interval for Eventinfo on cursor moving"
-msgstr ""
 
 msgid "Channel not in services list"
 msgstr "Canalul nu se gaseste in lista de servicii"
@@ -3319,10 +3318,6 @@ msgid "Default movie location"
 msgstr ""
 
 #, fuzzy
-msgid "Default recording type"
-msgstr "Incepe inregistrarea?"
-
-#, fuzzy
 msgid "Default settings"
 msgstr "Setari implicite"
 
@@ -3413,6 +3408,9 @@ msgstr ""
 msgid "Delay in miliseconds between scrolling characters on display."
 msgstr ""
 
+msgid "Delay when closing a stream relay service before reallocating the tuner for another service. Using '0' is only recommended for boxes with multiple satellite tuners."
+msgstr ""
+
 msgid "Delete"
 msgstr "Sterge"
 
@@ -3491,9 +3489,6 @@ msgid "Denmark"
 msgstr ""
 
 msgid "Depth"
-msgstr ""
-
-msgid "Descramble & record ECM gives the option to descramble afterwards if descrambling on recording failed. 'Don't descramble, record ECM' save a scramble recording that can be descrambled on playback. 'Normal' means descramble the recording and don't record ECM."
 msgstr ""
 
 msgid "Descramble receiving http streams"
@@ -5618,6 +5613,9 @@ msgstr "Comuta hard discul in standby dupa"
 msgid "Hardware Accelerated"
 msgstr ""
 
+msgid "Hardware: "
+msgstr ""
+
 msgid "HddMount"
 msgstr ""
 
@@ -5652,9 +5650,6 @@ msgid "Hide channel list in radio mode"
 msgstr ""
 
 msgid "Hide known extensions"
-msgstr ""
-
-msgid "Hide number markers"
 msgstr ""
 
 #, fuzzy
@@ -5911,6 +5906,10 @@ msgid ""
 "Image to install is invalid\n"
 "%s"
 msgstr ""
+
+#, fuzzy
+msgid "Image: "
+msgstr "Inapoi"
 
 msgid "ImageWizard"
 msgstr ""
@@ -6727,6 +6726,9 @@ msgstr ""
 #, fuzzy
 msgid "MB"
 msgstr "B"
+
+msgid "MENU"
+msgstr ""
 
 msgid "MHz"
 msgstr ""
@@ -7815,6 +7817,10 @@ msgstr ""
 msgid "Number or SMS style data entry"
 msgstr ""
 
+#, fuzzy
+msgid "OE Version: "
+msgstr "Model:"
+
 msgid "OK"
 msgstr "OK"
 
@@ -8104,6 +8110,12 @@ msgid "POT-Creation Date"
 msgstr ""
 
 msgid "PPanel"
+msgstr ""
+
+msgid "PREVIOUS"
+msgstr ""
+
+msgid "PVR"
 msgstr ""
 
 msgid "Package list update"
@@ -9070,6 +9082,10 @@ msgstr "Python frontend pentru /tmp/mni.socket"
 #, fuzzy
 msgid "Python version: "
 msgstr "Versiune noua:"
+
+#, fuzzy
+msgid "Pythonscript"
+msgstr "Descriere"
 
 msgid "Qatar"
 msgstr ""
@@ -10600,6 +10616,10 @@ msgstr ""
 msgid "Serial No"
 msgstr "necunoscut"
 
+#, fuzzy
+msgid "Serial: "
+msgstr "necunoscut"
+
 #, python-format
 msgid "Serial: %s"
 msgstr ""
@@ -10654,6 +10674,10 @@ msgstr ""
 msgid "Service info - tuner setting values"
 msgstr ""
 
+#, fuzzy
+msgid "Service info font size"
+msgstr "Info serviciu"
+
 msgid ""
 "Service invalid!\n"
 "(Timeout reading PMT)"
@@ -10665,12 +10689,20 @@ msgstr ""
 msgid "Service name"
 msgstr "Scanare Serviciu"
 
+#, fuzzy
+msgid "Service name font size"
+msgstr "Scanare Serviciu"
+
 msgid ""
 "Service not found!\n"
 "(SID not found in PAT)"
 msgstr ""
 "Serviciul nu a fost gasit!\n"
 "(SID nu a fost gasit in PAT)"
+
+#, fuzzy
+msgid "Service number font size"
+msgstr "Subtitrari"
 
 msgid "Service reference"
 msgstr ""
@@ -11011,6 +11043,9 @@ msgstr "renunta la editarea favoritelor"
 msgid "Show directories on first or last in list.(must restart File Commander)"
 msgstr ""
 
+msgid "Show disabled timers (local only)"
+msgstr ""
+
 #, fuzzy
 msgid "Show disclaimer"
 msgstr "arata Infoline"
@@ -11346,10 +11381,6 @@ msgstr "Individual"
 
 msgid "Single EPG"
 msgstr "EPG Individual"
-
-#, fuzzy
-msgid "Single line mode"
-msgstr "Selectati modul vieo"
 
 msgid "Single satellite"
 msgstr "Satelit individual"
@@ -11920,6 +11951,9 @@ msgstr "Pozitie memorata"
 msgid "Stream"
 msgstr ""
 
+msgid "Stream Relay delay"
+msgstr ""
+
 msgid "Stream request"
 msgstr ""
 
@@ -12410,6 +12444,11 @@ msgid ""
 "Make sure you select a writable directory instead."
 msgstr ""
 
+msgid ""
+"The enigma.info file for the boxinformation is not available or the content is invalid.\n"
+"Press any key to continue?"
+msgstr ""
+
 msgid "The following files were found..."
 msgstr "Urmatoarele fisiere nu au fost gasite..."
 
@@ -12562,6 +12601,9 @@ msgstr ""
 
 msgid "This DVD RW medium is already formatted - reformatting will erase all content on the disc."
 msgstr "Acest DVD RW este deja formatat - reformatarea presupune stergerea tuturorfisierelor de pe disc."
+
+msgid "This allows you to change the font size relative to skin size, so 1 increases by 1 point size, and -1 decreases by 1 point size"
+msgstr ""
 
 msgid "This allows you to set the number of digits to 5, if you have more than 9999 channels."
 msgstr ""
@@ -13542,6 +13584,10 @@ msgstr ""
 msgid "Use power measurement"
 msgstr "Foloseste Masurarea Energiei"
 
+#, fuzzy
+msgid "Use skin default"
+msgstr "listeaza stilul default"
+
 msgid "Use the cursor keys to select an installed image and then Start button."
 msgstr ""
 
@@ -14195,9 +14241,6 @@ msgid "When enabled, it will automatically play to the last saved radio service 
 msgstr ""
 
 msgid "When enabled, measure power consumption to detect when the rotor stops turning (when supported by the tuner)."
-msgstr ""
-
-msgid "When enabled, number markers will be hidden."
 msgstr ""
 
 msgid "When enabled, reformat subtitles to match the width of the screen."
@@ -16118,3 +16161,9 @@ msgstr ""
 
 msgid "zapped"
 msgstr "zapped"
+
+msgid "°E"
+msgstr ""
+
+msgid "°W"
+msgstr ""
