--- a/po/sl.po
+++ b/po/sl.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2 teamBlue\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-10-27 20:38+0200\n"
+"POT-Creation-Date: 2024-01-06 14:27+0100\n"
 "PO-Revision-Date: 2015-08-30 09:00+0200\n"
 "Last-Translator: Taykun345 <support@satnigmo.com>\n"
 "Language-Team: Satnigmo <support@satnigmo.com>\n"
@@ -255,6 +255,10 @@ msgstr "%a %e/%m"
 #. TRANSLATORS: long date representation short dayname daynum short monthname hour:minute in strftime() format! See 'man strftime'
 msgid "%a %e/%m  %-H:%M"
 msgstr "%a %e/%m  %-H:%M"
+
+#, python-format
+msgid "%d"
+msgstr ""
 
 #, python-format
 msgid "%d MB"
@@ -1546,9 +1550,6 @@ msgstr ""
 msgid "Aruba"
 msgstr ""
 
-msgid "As defined by the skin"
-msgstr ""
-
 #
 msgid "Ask user"
 msgstr "Vprašajte uporabnika"
@@ -2454,6 +2455,11 @@ msgstr "Kanal"
 msgid "Channel Info"
 msgstr "Kanal"
 
+#
+#, fuzzy
+msgid "Channel Selection"
+msgstr "Seznam kanalov"
+
 msgid "Channel button always changes sides"
 msgstr ""
 
@@ -2465,12 +2471,6 @@ msgstr "Seznam"
 #
 msgid "Channel list type"
 msgstr "Tip seznama kanalov"
-
-msgid "Channel list update Eventinfo delay"
-msgstr ""
-
-msgid "Channel list update interval for Eventinfo on cursor moving"
-msgstr ""
 
 #
 msgid "Channel not in services list"
@@ -3776,10 +3776,6 @@ msgstr ""
 msgid "Default movie location"
 msgstr "Privzeta \"movie\" lokacija"
 
-#, fuzzy
-msgid "Default recording type"
-msgstr "Vrsta snemanja"
-
 #
 msgid "Default settings"
 msgstr "Privzete nastavitve"
@@ -3873,6 +3869,9 @@ msgstr ""
 msgid "Delay in miliseconds between scrolling characters on display."
 msgstr ""
 
+msgid "Delay when closing a stream relay service before reallocating the tuner for another service. Using '0' is only recommended for boxes with multiple satellite tuners."
+msgstr ""
+
 #
 msgid "Delete"
 msgstr "Izbris"
@@ -3963,9 +3962,6 @@ msgstr ""
 
 msgid "Depth"
 msgstr "Globina"
-
-msgid "Descramble & record ECM gives the option to descramble afterwards if descrambling on recording failed. 'Don't descramble, record ECM' save a scramble recording that can be descrambled on playback. 'Normal' means descramble the recording and don't record ECM."
-msgstr ""
 
 #
 #, fuzzy
@@ -6432,6 +6428,10 @@ msgid "Hardware Accelerated"
 msgstr ""
 
 #, fuzzy
+msgid "Hardware: "
+msgstr "Sprejemnik: "
+
+#, fuzzy
 msgid "HddMount"
 msgstr "Pripenjanje"
 
@@ -6468,10 +6468,6 @@ msgstr "Skrij seznam kanalov v načinu Radio"
 
 msgid "Hide known extensions"
 msgstr "Skrij znane razširitve"
-
-#
-msgid "Hide number markers"
-msgstr "Skrij označevalce kanalov"
 
 #
 #, fuzzy
@@ -6757,6 +6753,11 @@ msgid ""
 "Image to install is invalid\n"
 "%s"
 msgstr ""
+
+#
+#, fuzzy
+msgid "Image: "
+msgstr "Nazaj"
 
 msgid "ImageWizard"
 msgstr ""
@@ -7677,6 +7678,9 @@ msgstr ""
 #, fuzzy
 msgid "MB"
 msgstr "B"
+
+msgid "MENU"
+msgstr ""
 
 msgid "MHz"
 msgstr ""
@@ -8917,6 +8921,11 @@ msgid "Number or SMS style data entry"
 msgstr ""
 
 #
+#, fuzzy
+msgid "OE Version: "
+msgstr "Signal:"
+
+#
 msgid "OK"
 msgstr "Potrditev"
 
@@ -9242,6 +9251,12 @@ msgid "POT-Creation Date"
 msgstr ""
 
 msgid "PPanel"
+msgstr ""
+
+msgid "PREVIOUS"
+msgstr ""
+
+msgid "PVR"
 msgstr ""
 
 #
@@ -10403,6 +10418,11 @@ msgstr ""
 #, fuzzy
 msgid "Python version: "
 msgstr "Verzija jedra: "
+
+#
+#, fuzzy
+msgid "Pythonscript"
+msgstr "Opis"
 
 msgid "Qatar"
 msgstr ""
@@ -12200,6 +12220,11 @@ msgid "Serial No"
 msgstr "Signal:"
 
 #
+#, fuzzy
+msgid "Serial: "
+msgstr "Signal:"
+
+#
 #, fuzzy, python-format
 msgid "Serial: %s"
 msgstr "Signal:"
@@ -12265,6 +12290,11 @@ msgid "Service info - tuner setting values"
 msgstr ""
 
 #
+#, fuzzy
+msgid "Service info font size"
+msgstr "Info. o kanalu"
+
+#
 msgid ""
 "Service invalid!\n"
 "(Timeout reading PMT)"
@@ -12275,6 +12305,10 @@ msgstr ""
 msgid "Service name"
 msgstr "Ime kanala"
 
+#, fuzzy
+msgid "Service name font size"
+msgstr "Ime kanala"
+
 #
 msgid ""
 "Service not found!\n"
@@ -12282,6 +12316,11 @@ msgid ""
 msgstr ""
 "Kanala ni moč najti!\n"
 "(SID ni v PAT)"
+
+#
+#, fuzzy
+msgid "Service number font size"
+msgstr "Velikost podnapisov"
 
 msgid "Service reference"
 msgstr "Ident. številka"
@@ -12661,6 +12700,9 @@ msgid "Show directories first"
 msgstr "Prekinitev urejanja priljubljenih"
 
 msgid "Show directories on first or last in list.(must restart File Commander)"
+msgstr ""
+
+msgid "Show disabled timers (local only)"
 msgstr ""
 
 #, fuzzy
@@ -13064,11 +13106,6 @@ msgstr "Posamezen"
 #
 msgid "Single EPG"
 msgstr "Enostavni EPG"
-
-#
-#, fuzzy
-msgid "Single line mode"
-msgstr "Izberite video način"
 
 #
 msgid "Single satellite"
@@ -13714,6 +13751,10 @@ msgstr "Shranjeni položaj"
 msgid "Stream"
 msgstr "Pretok"
 
+#, fuzzy
+msgid "Stream Relay delay"
+msgstr "Brez zamika"
+
 msgid "Stream request"
 msgstr "Zahtevek za pričetek pretakanja"
 
@@ -14279,6 +14320,11 @@ msgstr ""
 "Mapa %s ni zapisljiva.\n"
 "Poskrbite, da izberite zapisljivo mapo."
 
+msgid ""
+"The enigma.info file for the boxinformation is not available or the content is invalid.\n"
+"Press any key to continue?"
+msgstr ""
+
 #
 msgid "The following files were found..."
 msgstr "Najdene datoteke:"
@@ -14447,6 +14493,9 @@ msgstr ""
 #
 msgid "This DVD RW medium is already formatted - reformatting will erase all content on the disc."
 msgstr "DVD RW medij je že formatiran-ponovno formatiranje bo izbrisalo vso vsebino na mediju!"
+
+msgid "This allows you to change the font size relative to skin size, so 1 increases by 1 point size, and -1 decreases by 1 point size"
+msgstr ""
 
 msgid "This allows you to set the number of digits to 5, if you have more than 9999 channels."
 msgstr ""
@@ -15541,6 +15590,11 @@ msgstr "Izvirni položaj teletekst podnapisov"
 msgid "Use power measurement"
 msgstr "Uporaba merjenja moči"
 
+#
+#, fuzzy
+msgid "Use skin default"
+msgstr "Nastavi kot privzeto"
+
 msgid "Use the cursor keys to select an installed image and then Start button."
 msgstr ""
 
@@ -16285,10 +16339,6 @@ msgstr "Če je nastavitev vključena, potem sprejemnik samodejno uporabi zvočno
 
 msgid "When enabled, measure power consumption to detect when the rotor stops turning (when supported by the tuner)."
 msgstr "Če je nastavitev vključena, potem se meri porabo električne energije, da bi se zaznal trenutek, ko rotor preneha s premikanjem. Omenjena funkcija deluje le če jo podpira kanalnik sprejemnika."
-
-#, fuzzy
-msgid "When enabled, number markers will be hidden."
-msgstr "Če je nastavitev vključena, potem se kanali v seznamu kanalov ne številčijo."
 
 #, fuzzy
 msgid "When enabled, reformat subtitles to match the width of the screen."
@@ -18516,3 +18566,9 @@ msgstr "preklopi in snemaj"
 #
 msgid "zapped"
 msgstr "preklopljeno"
+
+msgid "°E"
+msgstr ""
+
+msgid "°W"
+msgstr ""
