--- a/po/sr.po
+++ b/po/sr.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2 teamBlue\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-10-27 20:38+0200\n"
+"POT-Creation-Date: 2024-01-06 14:27+0100\n"
 "PO-Revision-Date: 2011-04-14 00:02+0200\n"
 "Last-Translator: majevica <jovanovic@gmx.ch>\n"
 "Language-Team: veselin & majevica CRNABERZA <jovanovic@gmx.ch>\n"
@@ -254,6 +254,10 @@ msgstr ""
 
 #. TRANSLATORS: long date representation short dayname daynum short monthname hour:minute in strftime() format! See 'man strftime'
 msgid "%a %e/%m  %-H:%M"
+msgstr ""
+
+#, python-format
+msgid "%d"
 msgstr ""
 
 #, python-format
@@ -1528,9 +1532,6 @@ msgstr ""
 msgid "Aruba"
 msgstr ""
 
-msgid "As defined by the skin"
-msgstr ""
-
 #
 msgid "Ask user"
 msgstr "Pitaj korisnika"
@@ -2436,6 +2437,11 @@ msgstr "Kanal"
 msgid "Channel Info"
 msgstr "Kanal"
 
+#
+#, fuzzy
+msgid "Channel Selection"
+msgstr "Izbor kanala"
+
 msgid "Channel button always changes sides"
 msgstr ""
 
@@ -2448,12 +2454,6 @@ msgstr "Meni liste kanala"
 #, fuzzy
 msgid "Channel list type"
 msgstr "Meni liste kanala"
-
-msgid "Channel list update Eventinfo delay"
-msgstr ""
-
-msgid "Channel list update interval for Eventinfo on cursor moving"
-msgstr ""
 
 #
 msgid "Channel not in services list"
@@ -3775,11 +3775,6 @@ msgstr "Standardna lokacija filmova"
 
 #
 #, fuzzy
-msgid "Default recording type"
-msgstr "Započeti snimanje?"
-
-#
-#, fuzzy
 msgid "Default settings"
 msgstr "Standardne postavke"
 
@@ -3871,6 +3866,9 @@ msgid "Delay in miliseconds before start of scrolling text on display."
 msgstr ""
 
 msgid "Delay in miliseconds between scrolling characters on display."
+msgstr ""
+
+msgid "Delay when closing a stream relay service before reallocating the tuner for another service. Using '0' is only recommended for boxes with multiple satellite tuners."
 msgstr ""
 
 #
@@ -3965,9 +3963,6 @@ msgid "Denmark"
 msgstr ""
 
 msgid "Depth"
-msgstr ""
-
-msgid "Descramble & record ECM gives the option to descramble afterwards if descrambling on recording failed. 'Don't descramble, record ECM' save a scramble recording that can be descrambled on playback. 'Normal' means descramble the recording and don't record ECM."
 msgstr ""
 
 msgid "Descramble receiving http streams"
@@ -6411,6 +6406,9 @@ msgstr "Isključi hard disk posle"
 msgid "Hardware Accelerated"
 msgstr ""
 
+msgid "Hardware: "
+msgstr ""
+
 msgid "HddMount"
 msgstr ""
 
@@ -6447,9 +6445,6 @@ msgid "Hide channel list in radio mode"
 msgstr ""
 
 msgid "Hide known extensions"
-msgstr ""
-
-msgid "Hide number markers"
 msgstr ""
 
 #
@@ -6735,6 +6730,11 @@ msgid ""
 "Image to install is invalid\n"
 "%s"
 msgstr ""
+
+#
+#, fuzzy
+msgid "Image: "
+msgstr "Iza"
 
 msgid "ImageWizard"
 msgstr ""
@@ -7686,6 +7686,9 @@ msgstr ""
 #, fuzzy
 msgid "MB"
 msgstr "B"
+
+msgid "MENU"
+msgstr ""
 
 msgid "MHz"
 msgstr ""
@@ -8936,6 +8939,11 @@ msgid "Number or SMS style data entry"
 msgstr ""
 
 #
+#, fuzzy
+msgid "OE Version: "
+msgstr "Signal: "
+
+#
 msgid "OK"
 msgstr "OK"
 
@@ -9256,6 +9264,12 @@ msgid "POT-Creation Date"
 msgstr ""
 
 msgid "PPanel"
+msgstr ""
+
+msgid "PREVIOUS"
+msgstr ""
+
+msgid "PVR"
 msgstr ""
 
 #
@@ -10405,6 +10419,11 @@ msgstr "Čeoni python za /tmp/mmi.socket"
 #, fuzzy
 msgid "Python version: "
 msgstr "Nova verzija:"
+
+#
+#, fuzzy
+msgid "Pythonscript"
+msgstr "Opis"
 
 msgid "Qatar"
 msgstr ""
@@ -12195,6 +12214,11 @@ msgid "Serial No"
 msgstr "Signal: "
 
 #
+#, fuzzy
+msgid "Serial: "
+msgstr "Signal: "
+
+#
 #, fuzzy, python-format
 msgid "Serial: %s"
 msgstr "Signal: "
@@ -12261,6 +12285,11 @@ msgid "Service info - tuner setting values"
 msgstr ""
 
 #
+#, fuzzy
+msgid "Service info font size"
+msgstr "Info kanala"
+
+#
 msgid ""
 "Service invalid!\n"
 "(Timeout reading PMT)"
@@ -12274,12 +12303,22 @@ msgid "Service name"
 msgstr "Skeniranje Kanala"
 
 #
+#, fuzzy
+msgid "Service name font size"
+msgstr "Skeniranje Kanala"
+
+#
 msgid ""
 "Service not found!\n"
 "(SID not found in PAT)"
 msgstr ""
 "Kanal nije pronađen!\n"
 "(SID nije pronađen u PAT)"
+
+#
+#, fuzzy
+msgid "Service number font size"
+msgstr "Subtitlovi"
 
 msgid "Service reference"
 msgstr "Kanal referenca"
@@ -12661,6 +12700,9 @@ msgid "Show directories first"
 msgstr "odustani od uređivanja favorita"
 
 msgid "Show directories on first or last in list.(must restart File Commander)"
+msgstr ""
+
+msgid "Show disabled timers (local only)"
 msgstr ""
 
 #
@@ -13062,11 +13104,6 @@ msgstr "Jedan"
 #
 msgid "Single EPG"
 msgstr "Jedan EPG"
-
-#
-#, fuzzy
-msgid "Single line mode"
-msgstr "Izaberi video mod"
 
 #
 msgid "Single satellite"
@@ -13727,6 +13764,9 @@ msgstr "Snimljene pozicije"
 msgid "Stream"
 msgstr ""
 
+msgid "Stream Relay delay"
+msgstr ""
+
 msgid "Stream request"
 msgstr ""
 
@@ -14292,6 +14332,11 @@ msgstr ""
 "Direktorium %s nije za pisanje.\n"
 "Budi siguran da si umesto toga izabrao moguć direktorium."
 
+msgid ""
+"The enigma.info file for the boxinformation is not available or the content is invalid.\n"
+"Press any key to continue?"
+msgstr ""
+
 #
 msgid "The following files were found..."
 msgstr "Sledeće datoteke su pronađene..."
@@ -14467,6 +14512,9 @@ msgstr ""
 #
 msgid "This DVD RW medium is already formatted - reformatting will erase all content on the disc."
 msgstr "Ovaj DVD RW medij je već formatiran-ponovno formatiranje će izbrisati ceo sadržaj diska."
+
+msgid "This allows you to change the font size relative to skin size, so 1 increases by 1 point size, and -1 decreases by 1 point size"
+msgstr ""
 
 msgid "This allows you to set the number of digits to 5, if you have more than 9999 channels."
 msgstr ""
@@ -15561,6 +15609,11 @@ msgstr ""
 msgid "Use power measurement"
 msgstr "Koristi merenje snage"
 
+#
+#, fuzzy
+msgid "Use skin default"
+msgstr "standardne postavke stila liste"
+
 msgid "Use the cursor keys to select an installed image and then Start button."
 msgstr ""
 
@@ -16293,9 +16346,6 @@ msgid "When enabled, it will automatically play to the last saved radio service 
 msgstr ""
 
 msgid "When enabled, measure power consumption to detect when the rotor stops turning (when supported by the tuner)."
-msgstr ""
-
-msgid "When enabled, number markers will be hidden."
 msgstr ""
 
 msgid "When enabled, reformat subtitles to match the width of the screen."
@@ -18484,3 +18534,9 @@ msgstr ""
 #
 msgid "zapped"
 msgstr "prebačen"
+
+msgid "°E"
+msgstr ""
+
+msgid "°W"
+msgstr ""
